{
    "name": "PlayerProfile",
    "maps": [
        {
            "name": "PlayerMovementMap",
            "id": "d0519041-a0f5-4433-9ec3-95df1acd1094",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "6cdd0f23-1e7e-4f2f-afce-bc8de664e175",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "d5f5aa6a-3d42-46da-bf3b-6b57191d5fea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "39b275bc-55b3-4263-a472-246e7a952361",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9fe82dfd-61ff-4162-81df-d712feb226b5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ee063168-5fe8-483a-8fe7-d4d9cbc0b2d0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c2f5f63a-ac39-439e-b8eb-9294b15a1580",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3676c95d-14d0-4189-8eb9-55f11d0cc4b3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c8e03e9f-bbdf-42c2-89fc-f789b471d656",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerInteractionMap",
            "id": "e171ae20-11a2-403d-940e-009d1b791685",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "c0b4bdd8-222c-4e22-baea-44b8770ae291",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7a6616d3-a724-4c9c-aaad-b81a63bdc8de",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}